<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16dp"
    tools:context=".DetailCategoryFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/hello_blank_fragment" />
    <TextView
        android:id="@+id/category_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/this_is_the_desc" />

    <Button
        android:id="@+id/btn_profile_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_home"/>


</LinearLayout>